# transformer-roofline-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: transformer_roofline_tutorial.md
examples/: __init__.py  transformer_workloads.py
results/: transformer_roofline_results.csv
scripts/: plot_roofline.py  reproduce_demo.sh  run_transformer_roofline.py
src/: __init__.py  hardware_profiles.py  transformer_roofline.py
tests/: test_transformer_roofline.py
