[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "frame-transformer-roofline-lab"
version = "0.2.0"
description = "Educational transformer roofline modeling examples built on FRAME."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2.3",
    "pandas>=2.2,<3",
    "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = ["pytest>=7.4,<9"]

[tool.setuptools]
packages = ["src", "examples"]
